# ucdtools

./: .gitignore  COPYING  Doxyfile  Makefile.in  build.bat  config.h.in  configure  configure.ac
src/: Makefile.am  Makefile.in  Makefile.nmake  ucd.c  ucd.h  ucd_private.h  ucd_reader.c  ucd_writer.c  ucdconv.c
test/: sample.inp
